# shudongmiao

./: .gitignore  README.md
android/: gradle.properties  settings.gradle.kts
backend/: pyproject.toml
backend/app/: __init__.py  main.py  settings.py
backend/app/api/routes/: analyze.py  chat.py
backend/app/domain/: __init__.py  schemas.py  session_store.py
backend/app/services/: analyzer.py  media_pipeline.py  minicpm_client.py  prompt_builder.py  response_parser.py  retriever.py  risk_engine.py  visual_features.py
backend/knowledge/: README.md
backend/knowledge/care/: home_observation.md
backend/knowledge/docx_import/: visual_index.json
backend/knowledge/docx_import/abnormal_posture/: docx_abnormal_posture_01.md  docx_abnormal_posture_02.md  docx_abnormal_posture_03.md  docx_abnormal_posture_04.md  docx_abnormal_posture_05.md
backend/knowledge/docx_import/breathing_nose_mouth/: docx_breathing_nose_mouth_01.md  docx_breathing_nose_mouth_02.md  docx_breathing_nose_mouth_03.md  docx_breathing_nose_mouth_04.md
backend/knowledge/docx_import/coat_appearance/: docx_coat_appearance_01.md  docx_coat_appearance_02.md  docx_coat_appearance_03.md
backend/knowledge/emotion/: stress_signals.md
backend/knowledge/health/: appetite_drop.md  litterbox_warning.md  vomit_and_gait.md
backend/scripts/: import_docx_knowledge.py  probe_minicpm_ws.py  regression_emotion_diversity.py  run_local_backend.sh
backend/tests/: test_analyzer.py  test_api.py  test_media_pipeline.py  test_minicpm_client.py  test_response_parser.py  test_retriever.py  test_risk_engine.py
(+43 files in other folders)
